# openapi.yml
@@ -270,13 +270,27 @@ paths:
             type: string
         - $ref: '#/components/parameters/pageNumber'
         - $ref: '#/components/parameters/pageSize'
+        - name: search[name]
+          in: query
+          description: Search workspace by name
+          required: false
+          schema:
+            type: string
+        - name: search[tags]
+          in: query
+          description: Search workspace by tags
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Workspace'
+                $ref: '#/components/schemas/ListWorkspaces'
         '404':
           description: organization not found
         default:
@@ -403,6 +417,10 @@ components:
         autoApply:
           type: boolean
       type: object
+    ListWorkspaces:
+      type: array
+      items:
+        $ref: '#/components/schemas/Workspace'
     UpdateWorkspace:
       properties:
         executionMode:
